# grpo-trading

./: .gitignore  README.md  convert.slurm  download_assets.slurm  download_qwen4b.py  eval_direct.slurm  patch_config.py  patch_slime.py  presentation.md  pyproject.toml  reproduce_data.py  run_eval.slurm  run_slime.sh  test_data.jsonl  test_data_loading.py  test_news.py
cluster/: README.md  run_job_with_fix.sh  submit_job.sh
grpo_trader/: main.py  requirements.txt
grpo_trader/data/: loader.py  processor.py
grpo_trader/env/: trading_env.py
grpo_trader/model/: modeling.py
grpo_trader/slime_adapter/: gen_data.py  reward.py
grpo_trader/train/: grpo_trainer.py  loss.py
scripts/: benchmark_always_buy.py  eval_and_trade.py  eval_direct.py
tests/: test_grpo.py
