[project]
name = "grpo-trader"
version = "0.1.0"
description = "GRPO Crypto Trading Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers",
    "yfinance",
    "pandas",
    "numpy",
    "tqdm",
    "accelerate",
    "trl",
    "peft",
    "bitsandbytes"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["grpo_trader", "grpo_trader.data", "grpo_trader.env", "grpo_trader.model", "grpo_trader.train", "grpo_trader.slime_adapter"]

[tool.black]
line-length = 127

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
